# travel-booking-bot

./: Dockerfile  README.md  dev.env  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
app/: booking.py  config.py  db.py  decorator.py  logger.py  main.py  models.py  scraping.py  utils.py
tests/: test_db.py  test_scraping.py
